[gd_scene load_steps=18 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://collision_explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://player_cam.gd" type="Script" id=4]
[ext_resource path="res://flash.tres" type="Animation" id=5]
[ext_resource path="res://sounds/257232__javierzumer__retro-shot-blaster.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/318688__limitsnap-creations__rocket-thrust-effect.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/83631__arithni__heavy-thud.wav" type="AudioStream" id=8]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.0148699, 0.174721, 0.736059, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 700, 700, 0 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = -4.36833e-22
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 3.5
scale_random = 0.0
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="Gradient" id=4]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.859375, 0.181274, 0.181274, 1 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = PoolVector2Array( -17, 0, -17, -10, -4, -26, 2, -26, 50, 0, 2, 26, -4, 26, -17, 10, -17, 0 )

[sub_resource type="Curve" id=6]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.00363578, 0.392578 ), 0.0, 0.0, 0, 0, Vector2( 0.330768, 0.84375 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.263672 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]

flags = 4
width = 2048
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 10.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 0.9
scale = 14.0
scale_random = 0.2
scale_curve = SubResource( 7 )
color = Color( 0.984421, 0.986834, 0.988281, 1 )
hue_variation = 0.1
hue_variation_random = 0.5
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 0.9
scale = 9.0
scale_random = 0.2
scale_curve = SubResource( 7 )
color = Color( 0.984421, 0.986834, 0.988281, 1 )
hue_variation = 0.1
hue_variation_random = 0.5
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[node name="player" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 20.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.0
angular_velocity = 0.0
angular_damp = 1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Transform" ]
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )
particles = ExtResource( 3 )

[node name="player_cam" type="Camera2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( -2, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )
_sections_unfolded = [ "Pause" ]

[node name="vector_particles" type="Particles2D" parent="player_cam" index="0"]

show_behind_parent = true
z_index = -10
emitting = true
amount = 64
lifetime = 5.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Transform", "Visibility", "Z Index" ]

[node name="velocity_vec" type="Line2D" parent="." index="1"]

points = PoolVector2Array( 0, 0, 60, 0 )
width = 3.0
default_color = Color( 0.953125, 0.160095, 0.160095, 1 )
texture_mode = 1060211334
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Border", "Capping", "Fill", "Transform", "Visibility" ]

[node name="acceleration_vec" type="Line2D" parent="." index="2"]

points = PoolVector2Array( 0, 0, 60, 0 )
width = 3.0
default_color = Color( 0.277359, 0.679328, 0.972656, 1 )
texture_mode = 1060211334
begin_cap_mode = 1
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Capping" ]

[node name="outline" type="Line2D" parent="." index="3"]

points = PoolVector2Array( -17, 0, -17, -10, -4, -26, 2, -26, 50, 0, 2, 26, -4, 26, -17, 10, -17, 0 )
width = 11.0
default_color = Color( 0.988281, 0.972839, 0.972839, 1 )
texture_mode = 1060211334
joint_mode = 2
sharp_limit = 3.0
round_precision = 8
_sections_unfolded = [ "Border", "Capping", "Transform" ]

[node name="g" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="trail" type="Line2D" parent="g" index="0"]

show_behind_parent = true
z_index = -5
points = PoolVector2Array( 0, 0 )
width = 10.0
default_color = Color( 0.8125, 0.0666504, 0.0841312, 1 )
gradient = SubResource( 4 )
texture_mode = 1060211334
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Border", "Capping", "Fill", "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="trail_timer" type="Timer" parent="g" index="1"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = true

[node name="fill" type="Polygon2D" parent="." index="5"]

polygon = PoolVector2Array( -17, 0, -17, -10, -4, -26, 2, -26, 50, 0, 2, 26, -4, 26, -17, 10, -17, 0 )
uv = PoolVector2Array(  )
color = Color( 0.078125, 0.0726318, 0.0726318, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Texture" ]

[node name="collision" type="CollisionShape2D" parent="." index="6"]

shape = SubResource( 5 )

[node name="exaust" type="Particles2D" parent="." index="7"]

position = Vector2( -27.0205, -0.326057 )
rotation = 3.14159
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 8 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="reverse_exaust" type="Particles2D" parent="." index="8"]

position = Vector2( 35.5546, -14.644 )
rotation = 6.13132
emitting = false
amount = 3
lifetime = 0.3
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 9 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="reverse_exaust2" type="Particles2D" parent="." index="9"]

position = Vector2( 34.655, 15.4277 )
rotation = 6.70084
emitting = false
amount = 3
lifetime = 0.3
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 9 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="muzzle" type="Position2D" parent="." index="10"]

position = Vector2( 75, 0 )
_sections_unfolded = [ "Transform" ]

[node name="bullets" type="Node" parent="." index="11"]

[node name="gun_timer" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="collision_timer" type="Timer" parent="." index="13"]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="despawn_timer" type="Timer" parent="." index="14"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="flashing_animation" type="AnimationPlayer" parent="." index="15"]

root_node = NodePath("../outline")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/flash = ExtResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="shot_sfx" type="AudioStreamPlayer" parent="." index="16"]

stream = ExtResource( 6 )
volume_db = 4.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="thruster_sfx" type="AudioStreamPlayer" parent="." index="17"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="collision_sfx" type="AudioStreamPlayer" parent="." index="18"]

stream = ExtResource( 8 )
volume_db = 10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="particles_container" type="Node" parent="." index="19"]

[node name="particles_timer" type="Timer" parent="." index="20"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="timeout" from="collision_timer" to="." method="_on_timer_timeout"]

[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]


